# linkbot-interfaces

./: CMakeLists.txt  commontypes.proto  daemon.proto  daemon_legacy.proto  dongle.proto  dongle_legacy.proto  gen-daemon.pb.cpp  gen-daemon.pb.hpp  gen-dongle.pb.cpp  gen-dongle.pb.hpp  gen-robot.pb.cpp  gen-robot.pb.hpp  linkbot.proto  radio.proto  robot.proto  status.hpp
